# agent-channels

./: .gitignore  README.md  RELEASING.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
hooks/: session-start.py
plugins/agent-channels/: package.json
plugins/agent-channels/.codex-plugin/: plugin.json
plugins/agent-channels/skills/channels/: SKILL.md
plugins/agent-channels/src/agent_channels/: __init__.py
scripts/: sync-codex-plugin.py
skills/channels/: SKILL.md
src/agent_channels/: __init__.py
tests/: smoke.sh
